# Rythe-Engine

./: .clang-format  .clang_complete  .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS.html  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.html  README.md  VS22All.bat  VisualStudio22-All.bat  args-engine.sln  ci.sh  cl_error_patch.diff  cp-md-files.bat  feedback.html  genindex.html  getting-started.html  index.html  legion.sln  legion.sln.DotSettings  objects.inv  premake5.lua  run-clang-format.ps1  search.html  searchindex.js  test.html  xcopyexclude
applications/: CMakeLists.txt  todo.txt
applications/core_test/: .rythe_project
applications/core_test/src/core_test/: source.cpp
applications/editor/: .rythe_project  editor.vcxproj  editor.vcxproj.filters  source.cpp
applications/editor/assets/audio/: README.MD
applications/editor/assets/config/: test.args-test
applications/editor/assets/models/: submeshtest.mtl  xyz.mtl
applications/editor/assets/shaders/: color.shs  pbr.shs  texture.shs  wireframe.glsl  worldnormal.shs
applications/editor/engine/shaderlib/: lighting_input.shinc  texturemaps.shinc
applications/editor/engine/shaders/: aces.shs
applications/editor_application/: editor_application.vcxproj  editor_application.vcxproj.filters  source.cpp
applications/editor_application/assets/models/: submeshtest.mtl
applications/rsl_test/: .rythe_project  CMakeLists.txt  build-rsl_test.lua  source.cpp
applications/rsl_test/src/rsl_test/: source.cpp
applications/sandbox/: .rythe_project  CMakeLists.txt  build-sandbox.lua  imgui.ini  legacy_shaders.code-workspace  legion_shaders.code-workspace  murder_all_shaders.bat  resource.h  sandbox.rc  sandbox.vcxproj  sandbox.vcxproj.filters  scene1.json  source.cpp  test_filesystem.hpp
applications/sandbox/assets/: bigint.txt  camera.anim  test.anim  testttt.anim  vec.txt
applications/sandbox/assets/kernels/: calculatePoints.cl  pointRasterizer.cl
applications/sandbox/assets/materials/: aluminum.material  billboard.material  bog.material  copper.material  decal.material  default.material  directional light.material  fabric.material  fixed size billboard.material  fixed size particle.material  floor.material  gizmo.material  gnome.material  granite2.material  invalid.material  iron.material  normal.material  paint.material  particle.material  pbr.material  point light.material  rock 2.material  rock.material  rock2.material  slate.material  spot light.material  texture.material
applications/sandbox/assets/models/: BoxInterleaved.glb  Cube.mtl  OrientationTest.glb  TextureCoordinateTest.glb  audio-source.mtl  blenderexported.gltf  box.glb  cola.glb  cube.glb  fireplace.glb  hammer.mtl  magneticLevelLow.mtl  mug.mtl  submeshtest.glb  submeshtest.gltf  submeshtest.mtl  suzanne-test.mtl  suzanne.glb  suzanne.mtl  suzanne_test.glb  uvsphere.mtl  wizardgnome.glb  wizardgnome.gltf  wizardgnomeretop.mtl  xyz.glb
applications/sandbox/assets/scenes/: Main.cereal  Main.cornflake  Main0.cornflake  Main1.cornflake  Main2.cornflake  Main3.cornflake  Main4.cornflake  Main5.cornflake  Scene Test.cornflake  Scene.cornflake  example.json  example.yml  lmao.cornflake  mainscene.json  personal.json  scene.json  scene1.bson  scene1.json  scene1.yaml  scene2.bson  scene2.json  scene2.yaml
applications/sandbox/assets/serialization_output/: output.json
applications/sandbox/assets/shaders/: billboard.shs  bloomshader.shs  blurcolor.shs  brightnessthresholdshader.shs  color.shs  debug.shs  decal.shs  edgedetection.shs  gaussianblurshader.shs  groundplane.glsl  groundplane.shs  invertcolor.shs  light.shs  normal.shs  particle.shs  pbr.shs  pointShader.shs  position.shs  screenshader.shs  skybox.glsl  skybox.shs  texture.shs  uv.shs  vertexcolor.shs  wireframe.shs  worldnormal.shs  worldposition.shs
applications/sandbox/assets/textures/: aluminum.material
applications/sandbox/autogen/: autogen.hpp  autogen_prototype_example_comp.cpp  autogen_prototype_example_comp.hpp  autogen_reflector_example_comp.cpp  autogen_reflector_example_comp.hpp
applications/sandbox/data/: animation.cpp  animation.hpp  animation_events.hpp  crosshair.cpp  crosshair.hpp  decal_event.hpp  events_statics.cpp  explode_event.hpp  particle_event.hpp  pp_bloom.hpp  pp_blur.hpp  pp_edgedetect.hpp
applications/sandbox/engine/shaderlib/: color_correction.shinc  default_input.shinc  lighting.shinc  lighting_input.shinc  math_ext.shinc  stdio.shinc  texturemaps.shinc  utils.shinc
applications/sandbox/engine/shaders/: aces.shs  bloombrightnessthreshold.shs  bloomcombine.shs  bloomhistorymix.shs  default_lit.shs  depththreshold.shs  dofbokeh.shs  dofcombine.shs  downscaleshader.shs  fxaa.shs  gaussianblur.shs  invalid.shs  legiontonemap.shs  postfilter.shs  prefilter.shs  reinhard.shs  reinhardjodie.shs  rythetonemap.shs  screenshader.shs  unreal3.shs
applications/sandbox/module/: examplemodule.hpp  testModule.hpp  testmodule.hpp
applications/sandbox/systems/: CustomSystem.hpp  PointCloudTestSystem.hpp  animation_editor.cpp  animation_editor.hpp  animator.cpp  animator.hpp  event_based_decal_spawner.hpp  event_based_explosion_system.hpp  event_based_particle_spawner.hpp  examplesystem.hpp  explosion_particlesystem.hpp  final_presentation_system.hpp  gui_test.cpp  gui_test.hpp  mysystem.hpp  physics_test_system.cpp  physics_test_system.hpp  pointcloud_particlesystem.hpp  pointcloudtestsystem2.hpp  scenetestsystem1.hpp  simplecameracontroller.hpp  testsystem.hpp  testsystem2.hpp  testsystemconvexhull.hpp
applications/test_game/: Scene1.cornflake  source.cpp  test_filesystem.hpp  test_game.vcxproj  test_game.vcxproj.filters
applications/test_game/module/: testModule.cpp  testModule.hpp
applications/test_game/systems/: testsystem.hpp
applications/unit_tests/: build-tests.lua  doctest.h  source.cpp  test_filesystem.hpp  unit_test.cpp  unit_test.hpp  unit_tests.vcxproj  unit_tests.vcxproj.filters
rythe/: CMakeLists.txt
rythe/editor/: todo.txt
rythe/engine/: todo.txt
(+18186 files in other folders)
